--- a/Week-04/css/content.css
+++ b/Week-04/css/content.css
@@ -332,7 +332,9 @@ main {
     }
 
     .features-container {
+        max-width: 825px;
         padding: 0 14px;
+        margin: 0 auto;
     }
 
     .features-article {
@@ -525,6 +527,10 @@ main {
 
     .h2-title {
         margin-bottom: 54px;
+    }
+
+    .features-container {
+        max-width: 1120px;
     }
 
      .icon-features {
